apps/services/http-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apps-http-echo
  template:
    metadata:
      labels:
        app: apps-http-echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=Hello from http-echo"
          ports:
            - containerPort: 5678
