apps/services/http-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-http-echo
spec:
  selector:
    app: apps-http-echo
  ports:
    - port: 80
      targetPort: 5678
