apps/services/http-echo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-echo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`echo.svc.lab.local`)
      kind: Rule
      services:
        - name: http-echo
          port: 80
